force-app/main/default/objects/Student_Assessment_Result__c/fields/Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Question</label>
    <referenceTo>Assessment_Question__c</referenceTo>
    <relationshipLabel>Student Assessment Results</relationshipLabel>
    <relationshipName>Student_Assessment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>