force-app/main/default/objects/Student_Assessment_Result__c/fields/Que_Category__c.field-meta.xml
<CustomField>
    <fullName>Que_Category__c</fullName>
    <label>Que Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>