force-app/main/default/objects/Student_Assessment_Result__c/fields/Student_Test_Association__c.field-meta.xml
<CustomField>
    <fullName>Student_Test_Association__c</fullName>
    <label>Student Test Association</label>
    <referenceTo>Student_Test_Association__c</referenceTo>
    <relationshipLabel>Student Assessment Results</relationshipLabel>
    <relationshipName>Student_Assessment_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>