force-app/main/default/objects/Student_Assessment_Result__c/listViews/Student_Assessment_Result.listView-meta.xml
<ListView>
    <fullName>Student_Assessment_Result</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Question__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Marks__c</columns>
    <columns>Que_Category__c</columns>
    <columns>Student_Test_Association__c</columns>
    <filterScope>Everything</filterScope>
    <label>Student Assessment Result</label>
</ListView>